--- a/CellphoneComponent/CellphoneComponent/App.xaml
+++ b/CellphoneComponent/CellphoneComponent/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CellphoneComponent"
-             StartupUri="UI/UI_DangNhap.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
